--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^3.4.3",
-    "element-ui": "^2.13.0",
-    "json-bigint": "^0.3.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "axios": "0.19.0",
+    "core-js": "3.4.3",
+    "element-ui": "2.13.0",
+    "json-bigint": "0.3.0",
+    "vue": "2.6.10",
+    "vue-quill-editor": "3.0.6",
+    "vue-router": "3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
